--- a/package.json
+++ b/package.json
@@ -11,10 +11,15 @@
   "dependencies": {
     "react": "^18",
     "react-dom": "^18",
-    "next": "14.2.8"
+    "next": "14.2.8",
+    "@headlessui/react": "^1.4.2",
+    "axios": "^0.21.1",
+    "swr": "^1.3.0"
   },
   "devDependencies": {
     "postcss": "^8",
-    "tailwindcss": "^3.4.1"
+    "tailwindcss": "^3.4.1",
+    "@tailwindcss/forms": "^0.5.2",
+    "autoprefixer": "^10.4.2"
   }
 }
