--- a/package.json
+++ b/package.json
@@ -9,17 +9,19 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@headlessui/react": "^1.4.2",
+    "laravel-echo": "^1.16.1",
+    "next": "14.2.8",
+    "pusher-js": "^8.4.0-rc2",
     "react": "^18",
     "react-dom": "^18",
-    "next": "14.2.8",
-    "@headlessui/react": "^1.4.2",
-    "axios": "^0.21.1",
     "swr": "^1.3.0"
   },
   "devDependencies": {
-    "postcss": "^8",
-    "tailwindcss": "^3.4.1",
     "@tailwindcss/forms": "^0.5.2",
-    "autoprefixer": "^10.4.2"
+    "autoprefixer": "^10.4.2",
+    "axios": "^1.7.7",
+    "postcss": "^8",
+    "tailwindcss": "^3.4.1"
   }
 }
